frontend/test/should_fail/computations_no_break_continue_005.grg
pattern p()
{
	yield {
		continue;
	}
	
	modify {
		eval {
		}
	}
}
